# rust-ddb-full-crud-api

./: .gitignore  Cargo.toml  Full DDB API.postman_collection.json  README.md  cdk.json  docker-compose.yml  package-lock.json  package.json
cargo/: config.toml
infra/lib/: full-dynamodb-api-stack.ts
infra/lib/constructs/: api-gateway-construct.ts  delete-by-id-function-construct.ts  get-all-function-construct.ts  get-by-id-function-construct.ts  post-function-construct.ts  put-by-id-function-construct.ts  table-construct.ts
infra/lib/data-interaces/: function-props.ts
infra/test/: full-dynamodb-api.test.ts
lambdas/delete-by-id/: Cargo.toml
lambdas/delete-by-id/src/: data.rs  main.rs
lambdas/delete-by-id/test-events/: request-one.json
lambdas/get-all/: Cargo.toml
lambdas/get-all/src/: data.rs  main.rs
lambdas/get-by-id/src/: main.rs
lambdas/post/: Cargo.toml
lambdas/post/src/: data.rs  main.rs
lambdas/post/test-events/: request-one.json
lambdas/put-by-id/: Cargo.toml
lambdas/put-by-id/src/: data.rs  main.rs
lambdas/shared/: Cargo.toml
lambdas/shared/src/: lib.rs
lambdas/shared/src/clients/: lambda_ddb_client.rs  mod.rs
lambdas/shared/src/http/: mod.rs
lambdas/shared/src/models/: dto.rs  entities.rs  errors.rs  mod.rs
lib/: full-dynamodb-api-stack.ts
test/: full-dynamodb-api.test.ts
