[package]
name = "delete-by-id"
version = "0.1.0"
edition = "2021"
authors = ["Benjamen Pyle"]
resolver = "2"


[dependencies]

shared = { path = "../shared" }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }

lambda_http = "0.10.0"
aws-config = { features = ["behavior-version-latest"], version = "1.0.1" }
aws-sdk-dynamodb = "1.2.0"

tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
    "json",
    "env-filter",
    "registry",
] }
