[package]
name = "shared"
version = "0.1.0"
edition = "2021"
authors = ["Benjamen Pyle"]
resolver = "2"

[lib]

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"

serde_json = "1"
aws-config = { features = ["behavior-version-latest"], version = "1.0.1" }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
aws-sdk-dynamodb = "1.2.0"
tracing = "0.1.40"
aws_lambda_events = { version = "0.15.0", default-features = false, features = [
    "apigw",
] }
chrono = "0.4.35"
svix-ksuid = "0.8.0"
